# mesa-demos-serenity

./: .gitlab-ci.yml  CMakeLists.txt  configure.ac  index.html
.gitlab-ci/: build-mingw.sh  freeglut.def
src/: CMakeLists.txt
src/demos/: CMakeLists.txt  Makefile.am  dinoshade.c  fbo_firecube.c  gears.c  ipers.c  pixeltest.c  projtex.c  spriteblast.c  vao_demo.c
src/egl/eglut/: eglut_wayland.c
src/egl/opengl/: CMakeLists.txt  eglinfo.c
src/egl/opengles2/: es2gears.c  es2tri.c
src/fp/: CMakeLists.txt  Makefile.am  fp-tri.c  point-position.c  tri-depth.c  tri-depth2.c  tri-depthwrite.c  tri-depthwrite2.c  tri-param.c  tri-tex.c
src/fpglsl/: CMakeLists.txt  Makefile.am  fp-tri.c
src/glad/: CMakeLists.txt  Makefile.am  README.md
src/glad/include/glad/: glad.h  glad_wgl.h
src/glad/src/: glad.c  glad_wgl.c
src/glsl/: CMakeLists.txt  Makefile.am  array.c  bezier.c  bitmap.c  blinking-teapot.c  brick.c  bump.c  convolutions.c  deriv.c  fragcoord.c  fsraytrace.c  geom-outlining-130.c  geom-outlining-150.c  geom-sprites.c  geom-stipple-lines.c  geom-wide-lines.c  gsraytrace.cpp  identity.c  linktest.c  mandelbrot.c  multinoise.c  multitex.c  noise.c  noise2.c  pointcoord.c  points.c  samplers.c  shadow_sampler.c  shtest.c  simplex-noise.c  skinning.c  texaaline.c  texdemo1.c  toyball.c  trirast.c  twoside.c  vert-or-frag-only.c  vert-tex.c  vsraytrace.c
src/gs/: CMakeLists.txt  Makefile.am  gs-tri.c
src/objviewer/: CMakeLists.txt  Makefile.am  glmdraw.c  objview.c  skybox.c
src/osdemos/: Makefile.am
src/perf/: CMakeLists.txt  Makefile.am  glmain.c  glmain.h  glsl-compile-time.c  glslstateschange.c  readpixels.c  vbo.c
src/redbook/: CMakeLists.txt  Makefile.am  combiner.c  convolution.c  cubemap.c  fogcoord.c  histogram.c  minmax.c  multisamp.c  multitex.c  mvarray.c  pointp.c  shadowmap.c  texture3d.c
src/samples/: CMakeLists.txt  Makefile.am  blendeq.c  blendxor.c  copy.c
src/slang/: CMakeLists.txt  Makefile.am  framework.c  framework.h
src/tests/: CMakeLists.txt  Makefile.am  afsmultiarb.c  antialias.c  api_speed.c  arbfpspec.c  arbfptest1.c  arbfptexture.c  arbfptrig.c  arbgpuprog.c  arbnpot-mipmap.c  arbnpot.c  arbvparray.c  arbvptest1.c  arbvptest3.c  arbvptorus.c  arbvpwarpmesh.c  arraytexture.c  auxbuffer.c  backspecular.c  blendxor.c  blitfb.c  bufferobj.c  bug_3050.c  bug_3101.c  bug_3195.c  bug_texstore_i8.c  bumpmap.c  calibrate_rast.c  condrender.c  copypixrate.c  cva.c  debugger.c  drawbuffers.c  drawbuffers2.c  drawstencil.c  exactrast.c  ext422square.c  fbotest1.c  fbotest2.c  (+68 more)
src/tools/: CMakeLists.txt  dds.c
src/trivial/: CMakeLists.txt  Makefile.am  clear-fbo-scissor.c  clear-fbo-tex.c  clear-fbo.c  draw2arrays.c  drawarrays.c  drawelements-large.c  drawelements.c  drawrange.c  fs-tri.c  line-smooth.c  lineloop-elts.c  long-fixed-func.c  point-param.c  point-sprite.c  quad-tex-2d.c  quad-tex-3d.c  quad-tex-alpha.c  quad-tex-pbo.c  quad-tex-sub.c  readpixels.c  sub-tex.c  tex-quads.c  tri-2101010-dlist.c  tri-2101010.c  tri-alpha-tex.c  tri-array-interleaved.c  tri-blend-color.c  tri-blend-max.c  tri-blend-min.c  tri-blend-revsub.c  tri-blend-sub.c  tri-edgeflag-pv.c  tri-fbo-tex-mip.c  tri-fbo-tex.c  tri-fbo.c  tri-fp-const-imm.c  tri-fp.c  tri-multitex-vbo.c  (+25 more)
src/util/: CMakeLists.txt  Makefile.am  shaderutil.c
src/vp/: CMakeLists.txt  Makefile.am  vp-tris.c
src/vpglsl/: CMakeLists.txt  Makefile.am  vp-tris.c
src/wgl/: CMakeLists.txt  wglcontext.c  wglgears.c  wglinfo.c
src/xdemos/: CMakeLists.txt  Makefile.am  glinfo_common.c  glinfo_common.h  glxgears.c  yuvrect_client.c
